# hate-speech

./: README.md  pyproject.toml
nlp_bert/: classifier.py  nlp-api.py
notebooks/: EDA.ipynb  bert.ipynb
tests/: test_nlp_bert.py
