[tool.poetry]
name = "nlp-bert"
version = "0.1.0"
description = ""
authors = ["pyantony <agd10@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.60.1"
uvicorn = "^0.11.8"
torch = "^1.6.0"
torchvision = "^0.7.0"
transformers = "^3.0.2"
wget = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
